# tree_sum

./: .gitmodules  README.md  pyproject.toml  requirements.txt  setup.cfg
savorate/: aggregate.py
tests/: test_aggregate.py  test_tree.py
tree_sum/: aggregate.py  tree.py
